--- a/AndroidStudioProjects/AndroidLesson1/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProjects/AndroidLesson1/app/src/main/AndroidManifest.xml
@@ -66,7 +66,8 @@
             android:name=".EdgeDetectionActivity"
             android:label="@string/title_activity_edge_detection"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".BackgroundTimerActivity"></activity>
+        <activity android:name=".BackgroundTimerActivity" />
+        <activity android:name=".ShowNotification"></activity>
     </application>
 
 </manifest>
